--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 <!doctype html>\
-<html lang="en">\
-  <meta charset="utf-8" />\
-  <title>ivannaw.com</title>\
-  <meta name="viewport" content="width=device-width, initial-scale=1" />\
-  <body style="display:grid;place-items:center;height:100vh;font:700 3rem/1.2 system-ui;margin:0">\
-    hello, ivanna\
-  </body>\
-</html>}
+<!doctype html>
+<html lang="en">
+  <meta charset="utf-8" />
+  <title>ivannaw.com</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <body style="display:grid;place-items:center;height:100vh;font:700 3rem/1.2 system-ui;margin:0">
+    hello, ivanna
+  </body>
+</html>
